[gd_scene load_steps=10 format=3 uid="uid://bwbvswq202aif"]

[ext_resource type="Script" path="res://main/Main.gd" id="1_d327l"]
[ext_resource type="Script" path="res://main/Node2D.gd" id="2_4pc7c"]
[ext_resource type="FontFile" uid="uid://cc4fo28y42itf" path="res://upheavtt.ttf" id="2_geljc"]
[ext_resource type="PackedScene" uid="uid://bq4i2amke32q5" path="res://failed_popup.tscn" id="2_s5you"]
[ext_resource type="Texture2D" uid="uid://cq3ui8mh30ll2" path="res://parts/grass (1).png" id="3_eou4f"]
[ext_resource type="PackedScene" uid="uid://dx8qvaeriqys" path="res://sines/sine.tscn" id="6_58b27"]
[ext_resource type="PackedScene" uid="uid://7ifem1l8j8rv" path="res://dialogbox.tscn" id="7_7ws3l"]

[sub_resource type="Theme" id="Theme_h3e07"]

[sub_resource type="Curve2D" id="Curve2D_bu3k7"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_d327l")

[node name="Grass(1)" type="Sprite2D" parent="."]
position = Vector2(576, 362)
scale = Vector2(1, 0.882716)
texture = ExtResource("3_eou4f")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 544.0
offset_right = 1128.0
offset_bottom = 624.0
color = Color(0.113725, 0.282353, 0.160784, 0.733333)

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 24.0
offset_right = 66.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_geljc")
theme_override_font_sizes/font_size = 76
text = "i"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 80.0
color = Color(0.113725, 0.282353, 0.160784, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 33.0
offset_top = 7.0
offset_right = 377.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("2_geljc")
theme_override_font_sizes/font_size = 61
text = "Level #: List level objective"

[node name="GraphEdit" type="GraphEdit" parent="."]
modulate = Color(1, 1, 1, 0.988235)
clip_contents = false
layout_mode = 2
offset_top = 80.0
offset_bottom = 80.0
theme = SubResource("Theme_h3e07")
theme_override_colors/grid_minor = Color(0, 0, 0, 0)
theme_override_colors/grid_major = Color(0, 0, 0, 0)
theme_override_colors/selection_fill = Color(0, 0, 0, 0.309804)
theme_override_colors/selection_stroke = Color(0, 0, 0, 0)
theme_override_colors/activity = Color(0, 0, 0, 0)
right_disconnects = true
snap_distance = 50
panning_scheme = 1
zoom_min = 1.0
zoom_max = 1.0
minimap_enabled = false
arrange_nodes_button_hidden = true

[node name="Node2D" type="Path2D" parent="GraphEdit"]
curve = SubResource("Curve2D_bu3k7")
script = ExtResource("2_4pc7c")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
offset_left = 15.0
offset_top = 90.0
offset_right = 273.0
offset_bottom = 130.0
columns = 4

[node name="add_solar" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_geljc")
theme_override_font_sizes/font_size = 25
text = "Add Solar +"

[node name="add_load" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_geljc")
theme_override_font_sizes/font_size = 25
text = "Add Load +"

[node name="animate" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_geljc")
theme_override_font_sizes/font_size = 25
text = "play"

[node name="Control" parent="." instance=ExtResource("2_s5you")]
visible = false

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_left = 32.0
offset_top = 448.0
offset_right = 288.0
offset_bottom = 624.0

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 0
offset_left = -8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 176.0
color = Color(0.113725, 0.282353, 0.160784, 0.662745)

[node name="ColorRect" type="ColorRect" parent="Control2/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 160.0
color = Color(0.584314, 0.87451, 0.411765, 0.580392)

[node name="Label" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 48.0
offset_top = 10.0
offset_right = 193.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("2_geljc")
theme_override_font_sizes/font_size = 26
text = "Frequency"

[node name="freq" parent="Control2" instance=ExtResource("6_58b27")]

[node name="Timer" type="Timer" parent="."]

[node name="dialogbox" parent="." instance=ExtResource("7_7ws3l")]
visible = false
layout_mode = 1
offset_left = 568.0
offset_top = -24.0
offset_right = 568.0
offset_bottom = -24.0

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="draw" from="GraphEdit/Node2D" to="." method="_on_node_2d_draw"]
[connection signal="pressed" from="GridContainer/add_solar" to="." method="_on_add_solar_pressed"]
[connection signal="pressed" from="GridContainer/add_load" to="." method="_on_add_load_pressed"]
[connection signal="pressed" from="GridContainer/animate" to="." method="_on_animate_pressed"]
[connection signal="try_again" from="Control" to="." method="_on_try_again"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
